style: Ensure consistent height for team info boxes with scrollable overflow

--- a/src/assets/sass/local.scss
+++ b/src/assets/sass/local.scss
@@ -121,6 +121,7 @@
         .cs-info {
             text-align: center;
             width: 100%;
+            height: calc(200 / 16 * 1rem);
             /* prevents padding from affecting the height and width */
             box-sizing: border-box;
             padding: calc(24 / 16 * 1rem);
@@ -129,6 +130,7 @@
             align-items: center;
             position: relative;
             z-index: 10;
+            overflow-y: auto;
         }
 
         .cs-name {
